# lci

./: .gitignore  build  lc.c  lci.c  meson.build
examples/: base.lc  main.lc
src/: expr.c  expr.h  lci.c  main.c  meson.build  parse.c  parse.h  reduce.c  reduce.h
test/: meson.build  test_expr.c  test_parse.c  test_reduce.c
